Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

9-Oct-2010 Christophe Demko
 # [#22057] [patch] Broken unit tests for some form fields (Artyom Bisyarin)

8-Oct-2010 Christophe Demko
 # [#22759] Add version, date, author to Hathor (from Tracker # 22482) (thanks Andrea Tarr)
 # [#22734] Add Hathor support for tracker #21614 (thanks Andrea Tarr, Ole Bang Ottosen, bill richardson)
 # [#22754] Global values not used as default in blog and featured (thanks Elin Waring, bill richardson)

6-Oct-2010 Ron Severdia
 ^ Updated Blueprint to 1.0 in Atomic (Thanks Christian Montoya)
 
6-Oct-2010 Andrew Eddie
 # Partially Fixed [#21260] ACL Permissions for Authors to Edit Own Content Items Missing.
 # Partially Fixed [#22529] Permissions UI patch backend (Angie Radtke, Michael Babker, Elin Waring, Christophe Demko).
 
5-Oct-2010 Christophe Demko
 # [#22438] Wrong value before the search input box (I think) (thanks Ronald de Vries, bill richardson, Rouven Weßling, Elin Waring)
 # [#22675] Com_Categories mistake in xml (thanks Elin)
 # [#22595] Users with Edit permission assigned at category level in com_content cannot edit (thanks Michael Babker)
 # [#22711] Fixes to example content plugin (thanks Matt Thomas)
 # [#22269] JModelAdmin uses hard coded "id" field (Thanks Sam)
 # [#21656] Ability to limit System Info access (thanks Mathavan Jeyadev)
 # [#22335] Random "HTTP 500 Internal Server Error" on Contact (single) page (thanks Artyom Bisyarin)
 # [#22710] com_categories component does not manage well help url
 # [#22679] Files installer uses name not element to find unique instances

5-Oct-2010 Jean-Marie Simonet
 $ Normalizing some strings.
 
4-oct-2010 Christophe Demko
 # [#22049] Site Maintenance Menu (thanks bill richardson, Mathavan Jeyadev)
